@@ -6,7 +6,7 @@
 # Copyright (c) 1998-1999 by Scriptics Corporation.
 # All rights reserved.
 #
-# RCS: @(#) $Id: textTag.test,v 1.15 2008/12/12 00:09:38 nijtmans Exp $
+# RCS: @(#) $Id: textTag.test,v 1.16 2009/04/02 09:41:06 patthoyts Exp $
 
 package require tcltest 2.2
 namespace import ::tcltest::*
@@ -41,7 +41,6 @@ Line 4
 bOy GIrl .#@? x_yz
 !@#$%
 Line 7"
-
 
 test textTag-1.1 {tag configuration options} -constraints {
     haveCourier12
@@ -1338,6 +1337,7 @@ set y3 [expr [lindex $c 1] + [lindex $c 3]/2]
 
 test textTag-15.1 {TkTextBindProc} -constraints haveCourier12 -setup {
     .t tag delete x y
+    event generate {} <Motion> -warp 1 -x -1 -y -1; update
 } -body {
     bind .t <ButtonRelease> {lappend x up}
     .t tag bind x <ButtonRelease> {lappend x x-up}
@@ -1362,6 +1362,7 @@ test textTag-15.1 {TkTextBindProc} -constraints haveCourier12 -setup {
 
 test textTag-15.2 {TkTextBindProc} -constraints haveCourier12 -setup {
     .t tag delete x y
+    event generate {} <Motion> -warp 1 -x -1 -y -1; update
 } -body {
     .t tag bind x <Enter> {lappend x x-enter}
     .t tag bind x <ButtonPress> {lappend x x-down}
@@ -1389,6 +1390,7 @@ test textTag-15.2 {TkTextBindProc} -constraints haveCourier12 -setup {
 
 test textTag-15.3 {TkTextBindProc} -constraints haveCourier12 -setup {
     .t tag delete x y
+    event generate {} <Motion> -warp 1 -x -1 -y -1; update
 } -body {
     .t tag bind x <Enter> {lappend x x-enter}
     .t tag bind x <Any-ButtonPress-1> {lappend x x-down}
@@ -1423,6 +1425,7 @@ test textTag-16.1 {TkTextPickCurrent procedure} -constraints {
     haveCourier12 
 } -setup {
     .t tag delete {*}[.t tag names]
+    event generate {} <Motion> -warp 1 -x -1 -y -1; update
 } -body {
     event gen .t <ButtonRelease-1> -state 0x100 -x $x1 -y $y1
     set x [.t index current]
@@ -1444,6 +1447,7 @@ test textTag-16.2 {TkTextPickCurrent procedure} -constraints {
     haveCourier12 
 } -setup {
     .t tag delete {*}[.t tag names]
+    event generate {} <Motion> -warp 1 -x -1 -y -1; update
 } -body {
     .t tag configure big -font $bigFont
     event gen .t <ButtonRelease-1> -state 0x100 -x $x1 -y $y1
@@ -1462,6 +1466,7 @@ test textTag-16.3 {TkTextPickCurrent procedure} -constraints {
     foreach i {a b c d} {
         .t tag remove $i 1.0 end
     }
+    event generate {} <Motion> -warp 1 -x -1 -y -1; update
 } -body {
     foreach i {a b c d} {
         .t tag bind $i <Enter> "lappend x enter-$i"
@@ -1490,6 +1495,7 @@ test textTag-16.4 {TkTextPickCurrent procedure} -constraints {
     foreach i {a b c d} {
         .t tag remove $i 1.0 end
     }
+    event generate {} <Motion> -warp 1 -x -1 -y -1; update
 } -body {
     foreach i {a b c d} {
         .t tag bind $i <Enter> "lappend x enter-$i"
@@ -1517,6 +1523,7 @@ test textTag-16.5 {TkTextPickCurrent procedure} -constraints {
     foreach i {big a b c d} {
         .t tag remove $i 1.0 end
     }
+    event generate {} <Motion> -warp 1 -x -1 -y -1; update
 } -body {
     .t tag configure big -font $bigFont
     event gen .t <Motion> -x $x1 -y $y1
@@ -1534,6 +1541,7 @@ test textTag-16.6 {TkTextPickCurrent procedure} -constraints {
     foreach i {big a b c d} {
         .t tag remove $i 1.0 end
     }
+    event generate {} <Motion> -warp 1 -x -1 -y -1; update
 } -body {
     .t tag configure big -font $bigFont
     event gen .t <Motion> -x $x1 -y $y1
@@ -1552,6 +1560,7 @@ test textTag-16.7 {TkTextPickCurrent procedure} -constraints {
     foreach i {big a b c d} {
         .t tag remove $i 1.0 end
     }
+    event generate {} <Motion> -warp 1 -x -1 -y -1; update
 } -body {
     .t tag configure big -font $bigFont
     .t tag bind a <Enter> {.t tag add big 3.0 3.2}
@@ -1581,6 +1590,7 @@ test textTag-17.1 {insert procedure inserts tags} -setup {
 
 test textTag-18.1 {TkTextPickCurrent tag bindings} -setup {
     destroy .t
+    event generate {} <Motion> -warp 1 -x -1 -y -1; update
 } -body {
     text .t -width 30 -height 4 -relief sunken -borderwidth 10 \
       -highlightthickness 10 -pady 2
@@ -1612,8 +1622,3 @@ destroy .t
 # cleanup
 cleanupTests
 return
-
-
-
-
-
